# quantx-core

./: .gitignore  Cargo.toml  justfile  pyproject.toml
benches/: channel_async.rs  channel_sync.rs  ipc.rs  utils.rs
bindings/: Cargo.toml  pyproject.toml
bindings/python/: __main__.py
bindings/rust/: lib.rs
pyo3/: test.py
src/: channel.rs  clock.rs  execution.rs  indexer.rs  lib.rs  path.rs  plot.rs  route.rs  stream.rs  subscription.rs  trace.rs
src/channel/: base.rs  kanal.rs  mod.rs
src/engine/: audit.rs  clock.rs  exec.rs  mod.rs  risk.rs  state.rs  strategy.rs
src/exchange/: mod.rs
src/exchange/simulation/: mod.rs
src/protocol/: mod.rs  parser.rs  stream.rs  transformer.rs  websocket.rs
src/transport/: mod.rs
src/transport/channel/: base.rs  kanal.rs
src/transport/ipc/: mod.rs  shm.rs
