[package]
name = "quantx-core"
authors = ["nubiv <h.horace0921@gmail.com>"]
license = "MIT"
description = "quantx-core"
repository = "https://github.com/nubiv/quantx-core"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "bindings"]
resolver = "2"

[dependencies]
# Data Struct
rust_decimal = "1.37"
rust_decimal_macros = "1.37"
kanal = "0.1"
parking_lot = "0.12"
indexmap = "2.11"
fnv = "1.0"
smol_str = "0.3"

# Async
tokio = { version = "1.47", default-features = false, features = [
    "rt-multi-thread",
    "time",
] }
tokio-tungstenite = "0.27"
tokio-stream = "0.1"
futures = "0.3"
pin-project = "1.1.10"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.15"
simdutf8 = "0.1"

# Error
thiserror = "2.0"

# Python Integration
pyo3 = { version = "0.26", features = ["extension-module"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
charming = { version = "0.6", features = ["ssr"] }
toml = "0.9"
spin_sleep = "1.3"
derive_more = { version = "2.0", features = ["display", "constructor"] }

# Inspiration
barter = "0.12"
barter-data = "0.10"
barter-integration = "0.9"
barter-instrument = "0.3"
barter-execution = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.25"
libbpf-cargo = "0.25"
aya = "0.13"

[dev-dependencies]
criterion = "0.7"
crossbeam-channel = "0.5.15"

[features]
default = []

[[bench]]
name = "channel_sync"
harness = false

[[bench]]
name = "channel_async"
harness = false
