[package]
name = "quantx-core"
authors = ["nubiv <h.horace0921@gmail.com>"]
license = "MIT"
description = "quantx-core"
repository = "https://github.com/nubiv/quantx-core"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "bindings"]
resolver = "2"

[dependencies]
# Data Struct
rust_decimal = "1.37"
rust_decimal_macros = "1.37"
parking_lot = "0.12"
dashmap = "6.1"
indexmap = "2.11"
fnv = "1.0"
smol_str = "0.3"

# Async
tokio = { version = "1.47", default-features = false, features = [
    "rt-multi-thread",
    "time",
] }
tokio-tungstenite = "0.27"
tokio-stream = "0.1"
futures = "0.3"
pin-project = "1.1"

# Transport
kanal = "0.1"
iceoryx2 = { version = "0.7", features = ["logger_tracing"] }
iceoryx2-bb-container = "0.7"
crossbeam-channel = "0.5"
zenoh = "1.5"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# SerDe
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.15"
simdutf8 = "0.1"
bincode = "2.0"

# Error
thiserror = "2.0"

# Storage/Cache
sled = "0.34"
fjall = "2.11"
melange_db = "0.1"
slab = "0.4"
mini-moka = "0.10"

# Python Integration
pyo3 = { version = "0.26", features = ["extension-module"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
uuid = "1.18"
tabled = "0.20"
rand = "0.9"
charming = { version = "0.6", features = ["ssr"] }
toml = "0.9"
spin_sleep = "1.3"
derive_more = { version = "2.0", features = ["display", "constructor"] }

# Inspiration
barter = "0.12"
barter-data = "0.10"
barter-integration = "0.9"
barter-instrument = "0.3"
barter-execution = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.25"
libbpf-cargo = "0.25"
aya = "0.13"

[dev-dependencies]
criterion = "0.7"
pprof = "0.15"
rexpect = "0.6"

[features]
default = []

[[bench]]
name = "channel_sync"
harness = false

[[bench]]
name = "channel_async"
harness = false

[[bench]]
name = "ipc"
harness = false
